# kubevirt

./: .bazelrc  BUILD.bazel  WORKSPACE
cluster-up/cluster/kind/: common.sh
cluster-up/cluster/kind-k8s-sriov-1.17.0/manifests/: multus.yaml
cmd/virt-handler/: BUILD.bazel
cmd/virt-launcher/: BUILD.bazel
containerimages/: BUILD.bazel
examples/: vm-cirros-arm64.yaml
hack/: build-go.sh  dockerized
hack/builder/: Dockerfile  build.sh  version.sh
images/cdi-http-import-server/: BUILD.bazel
images/disks-images-provider/: BUILD.bazel
images/vm-killer/: BUILD.bazel
pkg/virt-api/webhooks/mutating-webhook/mutators/: vm-mutator_test.go  vmi-mutator_test.go
pkg/virt-api/webhooks/validating-webhook/admitters/: vmi-create-admitter_test.go
pkg/virt-config/: virt-config.go
pkg/virt-controller/services/: template.go  template_test.go
pkg/virt-launcher/virtwrap/api/: converter.go  converter_test.go  defaults.go  defaults_test.go  schema_test.go
